--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.2"
+    "@astrojs/svelte": "^2.1.1",
+    "@astrojs/tailwind": "^3.1.2",
+    "astro": "^2.3.3",
+    "svelte": "^3.58.0",
+    "tailwindcss": "^3.3.2"
   }
 }
